	software mode.
	* src/gui/login.cpp: Fixed small issue where default server didn't fit
	in the server entry field properly.
	* src/main.cpp: Display a progress bar and connecting status for each
	server and display the version using a gcn::Label.
	* src/gui/viewport.cpp, src/monster.h: Avoiding magic numbers where
	possible (1002) and also display the target when other players are
	targeted.

2007-03-20  David Athay  <ko2fan@gmail.com>

	* src/gui/viewport.cpp: Fixed target cursor animation, and changed
	which layer it is drawn after.
	* src/gui/viewport.cpp, src/gui/viewport.h: Split drawing the target
	cursor and target name into functions.

2007-03-20  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/gui/mouse.png: Positioned the cursor image more
	accurate.

2007-03-19  David Athay <ko2fan@gmail.com>

	* src/localplayer.cpp, src/gui/viewport.cpp, src/gui/viewport.h,
	src/net/equipmenthandler.cpp, src/localplayer.h,
	src/net/protocol.h: Added target cursor.

2007-03-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* docs/Makefile.am, docs/tmw.6: Added man page by Patrick Matthäi.
	* src/resources/image.cpp: Restored alpha layer check, since it should
	be more efficient in software mode when SDL knows an image doesn't use
	the alpha layer.
	* data/graphics/gui/thickborder.png,
	data/graphics/gui/vscroll_grey.png, data/graphics/gui/slider.png,
	data/graphics/gui/vscroll_blue.png, data/graphics/gui/vscroll_red.png,
	data/graphics/gui/deepbox.png,
	data/graphics/sprites/monster-slime-red.png,
	data/graphics/sprites/monster-scorpion-black.png,
	data/graphics/sprites/monster-scorpion.png,
	data/graphics/sprites/monster-slime-rudolph.png,
	data/graphics/sprites/monster-snake.png,
	data/graphics/sprites/monster-slime-santa.png,
	data/graphics/sprites/monster-maggot.png,
	data/graphics/sprites/monster-spider.png,
	data/graphics/sprites/monster-scorpion-red.png,
	data/graphics/sprites/monster-slime-yellow.png,
	data/graphics/sprites/monster-slime-green.png,