@@ -32,7 +32,7 @@
 #include "map.h"
 
 #include "resources/resourcemanager.h"
-#include "resources/spriteset.h"
+#include "resources/imageset.h"
 
 #include "gui/gui.h"
 
@@ -40,7 +40,7 @@
 #include "utils/tostring.h"
 
 int Being::instances = 0;
-Spriteset *Being::emotionset = NULL;
+ImageSet *Being::emotionSet = NULL;
 
 Being::Being(Uint32 id, Uint16 job, Map *map):
     mJob(job),
@@ -69,8 +69,8 @@ Being::Being(Uint32 id, Uint16 job, Map *map):
     {
         // Load the emotion set
         ResourceManager *rm = ResourceManager::getInstance();
-        emotionset = rm->getSpriteset("graphics/sprites/emotions.png", 30, 32);
-        if (!emotionset) logger->error("Unable to load emotions spriteset!");
+        emotionSet = rm->getImageSet("graphics/sprites/emotions.png", 30, 32);
+        if (!emotionSet) logger->error("Unable to load emotions!");
     }
 
     instances++;
@@ -86,8 +86,8 @@ Being::~Being()
 
     if (instances == 0)
     {
-        emotionset->decRef();
-        emotionset = NULL;
+        emotionSet->decRef();
+        emotionSet = NULL;
     }
 }
 
@@ -371,7 +371,7 @@ Being::drawEmotion(Graphics *graphics, Sint32 offsetX, Sint32 offsetY)
     int px = mPx + offsetX + 3;
     int py = mPy + offsetY - 60;
 
-    graphics->drawImage(emotionset->get(mEmotion - 1), px, py);
+    graphics->drawImage(emotionSet->get(mEmotion - 1), px, py);
 }
 
 void
