@@ -31,8 +31,6 @@
 
 #include "gui/gui.h"
 
-class Spriteset;
-
 NPC *current_npc = 0;
 
 NPC::NPC(Uint32 id, Uint16 job, Map *map, Network *network):
