@@ -23,12 +23,10 @@
 
 #include "simpleanimation.h"
 
-#include "graphics.h"
-
 
 void SimpleAnimation::update(unsigned int timePassed)
 {
-    mAnimationTime+=timePassed;
+    mAnimationTime += timePassed;
     while (mAnimationTime > mCurrentFrame->delay)
     {
         mAnimationTime -= mCurrentFrame->delay;
